# docs/swagger.json
@@ -1255,13 +1255,16 @@
                 "summary": "Get user by email or username",
                 "parameters": [
                     {
-                        "description": "User search criteria",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.GetUserRequest"
-                        }
+                        "type": "string",
+                        "description": "Username of the user",
+                        "name": "username",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Email of the user",
+                        "name": "email",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1594,17 +1597,6 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.GetUserRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "username": {
                     "type": "string"
                 }
             }
